@@ -51,6 +51,7 @@ Views 6.x-3.0-dev
     o #852854 by bojanz: Grammar fix on taxonomy default argument help text.
     o #526106 by Blackice2999: Fix occasional off-by-one-day problem with date arguments.
     o #843866 by dagmar: Allow summary views to specify their path rather than assuming the view path all the time.
+    o #785960 by dereine: Reset button should appear after Apply button, not before.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
